--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="styles.css" rel="stylesheet">
     <link href="datepicker.css" rel="stylesheet">
-    <title>Flight Search Engine</title>
+    <title>Adso Flight Search Assignment</title>
   </head>
   <body>
     <div id="root"></div>
